add metrics to LDA

--- a/src/notebooks/carran_analysis/shape_analysis.ipynb
+++ b/src/notebooks/carran_analysis/shape_analysis.ipynb
@@ -253,6 +253,107 @@
     "if handles:\n",
     "    axes[0].legend(handles=handles, loc=\"upper left\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fa88d18f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "from sklearn.model_selection import StratifiedKFold\n",
+    "from sklearn.preprocessing import label_binarize\n",
+    "from sklearn.metrics import (\n",
+    "    roc_auc_score,\n",
+    "    average_precision_score,\n",
+    "    recall_score,\n",
+    "    precision_score,\n",
+    ")\n",
+    "\n",
+    "\n",
+    "def per_class_separability(X, y, cv=5, random_state=42, in_sample: bool = False):\n",
+    "    \"\"\"\n",
+    "    per-class separability for LDA.\n",
+    "\n",
+    "    Returns a DataFrame with per-class ROC-AUC (OvR), PR-AUC (OvR),\n",
+    "    recall, precision, support, and mean true-class posterior.\n",
+    "    \"\"\"\n",
+    "    X = np.asarray(X)\n",
+    "    y = np.asarray(y)\n",
+    "    classes = np.unique(y)\n",
+    "\n",
+    "    skf = StratifiedKFold(n_splits=cv, shuffle=True, random_state=random_state)\n",
+    "    y_proba = np.zeros((len(y), len(classes)))\n",
+    "    y_pred = np.empty(len(y), dtype=classes.dtype)\n",
+    "\n",
+    "    for train_idx, test_idx in skf.split(X, y):\n",
+    "        if in_sample:\n",
+    "            test_idx = train_idx\n",
+    "\n",
+    "        lda = LinearDiscriminantAnalysis()\n",
+    "        lda.fit(X[train_idx], y[train_idx])\n",
+    "\n",
+    "        # Align fold probabilities to a fixed class order\n",
+    "        fold_classes = lda.classes_\n",
+    "        align = np.array([np.where(fold_classes == c)[0][0] for c in classes])\n",
+    "\n",
+    "        proba = lda.predict_proba(X[test_idx])[:, align]\n",
+    "        y_proba[test_idx] = proba\n",
+    "        y_pred[test_idx] = classes[np.argmax(proba, axis=1)]\n",
+    "\n",
+    "    # One-vs-rest AUCs\n",
+    "    y_bin = label_binarize(y, classes=classes)\n",
+    "    auc_ovr = roc_auc_score(y_bin, y_proba, average=None)\n",
+    "    ap_ovr = average_precision_score(y_bin, y_proba, average=None)\n",
+    "\n",
+    "    # Per-class precision/recall (hard predictions)\n",
+    "    recall = recall_score(y, y_pred, labels=classes, average=None, zero_division=0)\n",
+    "    precision = precision_score(\n",
+    "        y, y_pred, labels=classes, average=None, zero_division=0\n",
+    "    )\n",
+    "\n",
+    "    # Mean posterior for the true class (soft, interpretable as “confidence”)\n",
+    "    true_post = np.array(\n",
+    "        [y_proba[i, np.where(classes == y[i])[0][0]] for i in range(len(y))]\n",
+    "    )\n",
+    "    mean_true_post = np.array([true_post[y == c].mean() for c in classes])\n",
+    "\n",
+    "    support = np.array([(y == c).sum() for c in classes])\n",
+    "\n",
+    "    out = (\n",
+    "        pd.DataFrame(\n",
+    "            {\n",
+    "                \"support\": support,\n",
+    "                \"recall\": recall,  # “X% of the time we correctly pick this class”\n",
+    "                \"precision\": precision,\n",
+    "                \"roc_auc_ovr\": auc_ovr,  # threshold-free separability vs rest\n",
+    "                \"ap_ovr\": ap_ovr,  # PR AUC (useful for imbalance)\n",
+    "                \"mean_true_posterior\": mean_true_post,  # avg P(class | x) for true class\n",
+    "            },\n",
+    "            index=classes,\n",
+    "        )\n",
+    "        .sort_index()\n",
+    "        .rename(index=encoding)\n",
+    "    )\n",
+    "\n",
+    "    return out\n",
+    "\n",
+    "\n",
+    "# Out-of-sample metrics\n",
+    "per_class_separability(mf_coeffs, groups, cv=5, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1b7cc615",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# In-sample metrics\n",
+    "per_class_separability(mf_coeffs, groups, cv=5, random_state=42, in_sample=True)"
+   ]
   }
  ],
  "metadata": {
