--- a/src/notebooks/carran_analysis/shape_analysis.ipynb
+++ b/src/notebooks/carran_analysis/shape_analysis.ipynb
@@ -45,7 +45,7 @@
     "df.loc[np.isnan(df[\"magnification\"]), \"magnification\"] = -1\n",
     "\n",
     "def plot_mdata(df):\n",
-    "    fig, axes = plt.subplots(1, 4, figsize=(16, 4))\n",
+    "    fig, axes = plt.subplots(1, 5, figsize=(16, 4))\n",
     "    for axis, label in zip(axes, [c for c in df.columns if c != \"path\"]):\n",
     "        axis.hist(df[label], bins=25)\n",
     "        axis.set_title(label)\n",
@@ -63,13 +63,18 @@
     "import seaborn as sns\n",
     "\n",
     "# count occurrences of each combination of \"age\" and \"sex\"\n",
-    "heatmap_data = df.pivot_table(index=\"age\", columns=\"sex\", aggfunc=\"size\", fill_value=0)\n",
     "\n",
     "# Plot the heatmap\n",
-    "fig, axis = plt.subplots(1, 1, figsize=(6, 6))\n",
-    "sns.heatmap(heatmap_data, annot=True, fmt=\"d\", ax=axis, cbar=False)\n",
-    "axis.set_ylabel(\"Age\")\n",
-    "axis.set_xlabel(\"Sex\")"
+    "fig, axes = plt.subplots(1, 3, figsize=(18, 6))\n",
+    "for axis, label1, label2 in zip(\n",
+    "    axes, [\"age\", \"sex\", \"growth\"], [\"sex\", \"growth\", \"age\"]\n",
+    "):\n",
+    "    heatmap_data = df.pivot_table(\n",
+    "        index=label1, columns=label2, aggfunc=\"size\", fill_value=0\n",
+    "    )\n",
+    "    sns.heatmap(heatmap_data, annot=True, fmt=\"d\", ax=axis, cbar=False)\n",
+    "    axis.set_ylabel(label1)\n",
+    "    axis.set_xlabel(label2)"
    ]
   },
   {
