show the edits to the scales + count how many were edited (around 93 of 930)

--- a/src/notebooks/carran_analysis/shape_analysis.ipynb
+++ b/src/notebooks/carran_analysis/shape_analysis.ipynb
@@ -6,7 +6,8 @@
    "metadata": {},
    "source": [
     "Metadata\n",
-    "===="
+    "====\n",
+    "First, we'll find how many scales were manually edited (and how):"
    ]
   },
   {
@@ -25,6 +26,121 @@
     "\n",
     "segmentation_paths = sorted([str(x) for x in parent_dir.glob(\"*.tif\")])\n",
     "f\"{len(segmentation_paths)} segmentations\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c6f85080",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clean_seg_dir = parent_dir.parents[2] / \"segmentations_cleaned\"\n",
+    "clean_seg_paths = [clean_seg_dir / pathlib.Path(p).name for p in segmentation_paths]\n",
+    "\n",
+    "for p in clean_seg_paths:\n",
+    "    assert p.exists()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7124ae38",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "Read in pairs of the clean/raw segmentations. Invert the clean ones (whoops) and check them against the raw; if they don't match, keep track of them...\n",
+    "\"\"\"\n",
+    "\n",
+    "import tifffile\n",
+    "import numpy as np\n",
+    "from tqdm.notebook import tqdm\n",
+    "\n",
+    "scale_paths = [parent_dir.parent / p.name.replace(\"_segmentation.tif\", \".tif\") for p in clean_seg_paths]\n",
+    "\n",
+    "scale_imgs = []\n",
+    "raw_segs = []\n",
+    "clean_segs = []\n",
+    "edited_names = []\n",
+    "\n",
+    "for scale_path, raw_seg_path, clean_seg_path in zip(\n",
+    "    tqdm(scale_paths), segmentation_paths, clean_seg_paths\n",
+    "):\n",
+    "    clean_seg = tifffile.imread(clean_seg_path)\n",
+    "    raw_seg = tifffile.imread(raw_seg_path) * 255\n",
+    "\n",
+    "    clean_segs.append(clean_seg)\n",
+    "    raw_segs.append(raw_seg)\n",
+    "\n",
+    "    if (clean_seg == raw_seg).all():\n",
+    "        scale_imgs.append(None)\n",
+    "        continue\n",
+    "\n",
+    "    edited_names.append(clean_seg_path.name)\n",
+    "    scale_imgs.append(tifffile.imread(scale_path))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "508a5652",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "There are too many edited scales to show all of them, so instead let's just show a subset\n",
+    "\"\"\"\n",
+    "\n",
+    "import textwrap\n",
+    "import matplotlib.pyplot as plt\n",
+    "from matplotlib import colors\n",
+    "\n",
+    "\n",
+    "def clear_seismic() -> colors.Colormap:\n",
+    "    \"\"\"\n",
+    "    Colormap that varies from clear to a colour\n",
+    "    \"\"\"\n",
+    "    c_blue = colors.colorConverter.to_rgba(\"blue\")\n",
+    "    c_white = colors.colorConverter.to_rgba(\"white\", alpha=0)\n",
+    "    c_red = colors.colorConverter.to_rgba(\"red\")\n",
+    "    return colors.ListedColormap([c_blue, c_white, c_red], f\"clear2seismic\")\n",
+    "\n",
+    "\n",
+    "fig, axes = plt.subplots(5, 5, figsize=(20, 20))\n",
+    "\n",
+    "np.random.seed(0)\n",
+    "names = np.random.choice(edited_names, 25)\n",
+    "\n",
+    "for axis, name in zip(axes.flat, names):\n",
+    "    # Find the index where it lives in the list\n",
+    "    i = 0\n",
+    "    for p in scale_paths:\n",
+    "        if p.name == name.replace(\"_segmentation.tif\", \".tif\"):\n",
+    "            break\n",
+    "        i += 1\n",
+    "    axis.imshow(scale_imgs[i])\n",
+    "    axis.imshow(clean_segs[i], alpha=0.5)\n",
+    "    axis.imshow(\n",
+    "        raw_segs[i] - clean_segs[i],\n",
+    "        cmap=clear_seismic(),\n",
+    "        vmin=-1,\n",
+    "        vmax=1,\n",
+    "        interpolation=\"none\",\n",
+    "    )\n",
+    "\n",
+    "    axis.set_title(\"\\n\".join(textwrap.wrap(name, width=20)))\n",
+    "    axis.set_axis_off()\n",
+    "\n",
+    "fig.tight_layout()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "193bf0e5",
+   "metadata": {},
+   "source": [
+    "Next we'll get some stats on the growth stages, sex, age, mutation etc."
    ]
   },
   {
