run the analysis with Carran's cleaned segmentations instead

--- a/src/notebooks/carran_analysis/shape_analysis.ipynb
+++ b/src/notebooks/carran_analysis/shape_analysis.ipynb
@@ -107,10 +107,9 @@
     "    return colors.ListedColormap([c_blue, c_white, c_red], f\"clear2seismic\")\n",
     "\n",
     "\n",
-    "fig, axes = plt.subplots(5, 5, figsize=(20, 20))\n",
+    "fig, axes = plt.subplots(10, 10, figsize=(24, 24))\n",
     "\n",
-    "np.random.seed(0)\n",
-    "names = np.random.choice(edited_names, 25)\n",
+    "names = [n for n in names if n is not None]\n",
     "\n",
     "for axis, name in zip(axes.flat, names):\n",
     "    # Find the index where it lives in the list\n",
@@ -129,10 +128,34 @@
     "        interpolation=\"none\",\n",
     "    )\n",
     "\n",
-    "    axis.set_title(\"\\n\".join(textwrap.wrap(name, width=20)))\n",
+    "    axis.set_title(\n",
+    "        \"\\n\".join(textwrap.wrap(name, width=20)).strip(\".tif\").replace(\"_\", \" \"),\n",
+    "        fontsize=8,\n",
+    "    )\n",
     "    axis.set_axis_off()\n",
     "\n",
     "fig.tight_layout()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e69f07b7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(scale_imgs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5548615c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# We don't need the non-clean masks any more\n",
+    "del segmentation_paths"
    ]
   },
   {
@@ -155,7 +178,7 @@
     "\n",
     "from scale_morphology.scales import metadata\n",
     "\n",
-    "df = metadata.df(segmentation_paths)\n",
+    "df = metadata.df([str(x) for x in clean_seg_paths])\n",
     "\n",
     "# Replace NaN magnifications with -1\n",
     "df.loc[np.isnan(df[\"magnification\"]), \"magnification\"] = -1\n",
@@ -204,7 +227,7 @@
     "from tqdm.notebook import tqdm\n",
     "from scale_morphology.scales import efa, errors\n",
     "\n",
-    "coeff_dump = pathlib.Path(\"rough_carran_coeffs.npy\")\n",
+    "coeff_dump = pathlib.Path(\"carran_coeffs.npy\")\n",
     "\n",
     "if coeff_dump.is_file():\n",
     "    coeffs = np.load(coeff_dump)\n",
@@ -214,7 +237,7 @@
     "    for scale in tqdm(\n",
     "        [\n",
     "            tifffile.imread(path).astype(np.uint8) * 255\n",
-    "            for path in tqdm(segmentation_paths)\n",
+    "            for path in tqdm(clean_seg_paths)\n",
     "        ]\n",
     "    ):\n",
     "        try:\n",
