--- a/src/notebooks/carran_analysis/shape_analysis.ipynb
+++ b/src/notebooks/carran_analysis/shape_analysis.ipynb
@@ -89,7 +89,7 @@
    "outputs": [],
    "source": [
     "\"\"\"\n",
-    "There are too many edited scales to show all of them, so instead let's just show a subset\n",
+    "Show the edited scales\n",
     "\"\"\"\n",
     "\n",
     "import textwrap\n",
@@ -109,7 +109,7 @@
     "\n",
     "fig, axes = plt.subplots(10, 10, figsize=(24, 24))\n",
     "\n",
-    "names = [n for n in names if n is not None]\n",
+    "names = [n for n in edited_names if n is not None]\n",
     "\n",
     "for axis, name in zip(axes.flat, names):\n",
     "    # Find the index where it lives in the list\n",
