speed up iterator, we've already read the scales probably

--- a/src/notebooks/carran_analysis/shape_analysis.ipynb
+++ b/src/notebooks/carran_analysis/shape_analysis.ipynb
@@ -234,12 +234,7 @@
     "else:\n",
     "    n_edge_points, order = 300, 50\n",
     "    coeffs = []\n",
-    "    for scale in tqdm(\n",
-    "        [\n",
-    "            tifffile.imread(path).astype(np.uint8) * 255\n",
-    "            for path in tqdm(clean_seg_paths)\n",
-    "        ]\n",
-    "    ):\n",
+    "    for scale in tqdm(clean_segs):\n",
     "        try:\n",
     "            coeffs.append(efa.coefficients(scale, n_edge_points, order))\n",
     "        except errors.BadImgError as e:\n",
