print number of NaN coeffs

--- a/src/notebooks/carran_analysis/shape_analysis.ipynb
+++ b/src/notebooks/carran_analysis/shape_analysis.ipynb
@@ -257,6 +257,7 @@
     "\n",
     "flat_coeffs = coeffs.reshape((coeffs.shape[0], -1))\n",
     "nan_mask = np.isnan(flat_coeffs).any(axis=1)\n",
+    "print(f\"{np.sum(nan_mask)} NaN\")\n",
     "\n",
     "df_nan_removed = df[~nan_mask].copy()\n",
     "flat_coeffs_nan_removed = flat_coeffs[~nan_mask]\n",
