fill holes + remove small objects when reading scales

--- a/src/notebooks/carran_analysis/shape_analysis.ipynb
+++ b/src/notebooks/carran_analysis/shape_analysis.ipynb
@@ -56,8 +56,15 @@
     "import tifffile\n",
     "import numpy as np\n",
     "from tqdm.notebook import tqdm\n",
+    "from skimage.measure import euler_number\n",
+    "from scipy.ndimage import binary_fill_holes\n",
     "\n",
-    "scale_paths = [parent_dir.parent / p.name.replace(\"_segmentation.tif\", \".tif\") for p in clean_seg_paths]\n",
+    "from scale_morphology.scales.segmentation import largest_connected_component\n",
+    "\n",
+    "scale_paths = [\n",
+    "    parent_dir.parent / p.name.replace(\"_segmentation.tif\", \".tif\")\n",
+    "    for p in clean_seg_paths\n",
+    "]\n",
     "\n",
     "scale_imgs = []\n",
     "raw_segs = []\n",
@@ -68,7 +75,16 @@
     "    tqdm(scale_paths), segmentation_paths, clean_seg_paths\n",
     "):\n",
     "    clean_seg = tifffile.imread(clean_seg_path)\n",
-    "    raw_seg = tifffile.imread(raw_seg_path) * 255\n",
+    "    raw_seg = (tifffile.imread(raw_seg_path) * 255).astype(np.uint8)\n",
+    "\n",
+    "    if euler_number(clean_seg) != 1:\n",
+    "        # Fill holes\n",
+    "        clean_seg = binary_fill_holes(clean_seg)\n",
+    "        # Remove small objects\n",
+    "        clean_seg = (largest_connected_component(clean_seg) * 255).astype(np.uint8)\n",
+    "\n",
+    "    if euler_number(clean_seg) != 1:\n",
+    "        raise\n",
     "\n",
     "    clean_segs.append(clean_seg)\n",
     "    raw_segs.append(raw_seg)\n",
