make bits nicer

--- a/src/notebooks/carran_analysis/shape_analysis.ipynb
+++ b/src/notebooks/carran_analysis/shape_analysis.ipynb
@@ -66,10 +66,13 @@
     "    for p in clean_seg_paths\n",
     "]\n",
     "\n",
-    "scale_imgs = []\n",
-    "raw_segs = []\n",
+    "# This is what we'll use for the analysis\n",
     "clean_segs = []\n",
-    "edited_names = []\n",
+    "\n",
+    "# This is \n",
+    "raw_segs = []\n",
+    "scale_imgs = []  # The original image, or None if the clean + raw masks are the same\n",
+    "edited_names = []  # Names of the edited scales\n",
     "\n",
     "for scale_path, raw_seg_path, clean_seg_path in zip(\n",
     "    tqdm(scale_paths), segmentation_paths, clean_seg_paths\n",
@@ -83,14 +86,16 @@
     "        # Remove small objects\n",
     "        clean_seg = (largest_connected_component(clean_seg) * 255).astype(np.uint8)\n",
     "\n",
+    "    # It's possible we might have removed everything\n",
     "    if euler_number(clean_seg) != 1:\n",
-    "        raise\n",
+    "        raise ValueError(f\"Got {euler_number(clean_seg)=}\")\n",
     "\n",
     "    clean_segs.append(clean_seg)\n",
     "    raw_segs.append(raw_seg)\n",
     "\n",
     "    if (clean_seg == raw_seg).all():\n",
     "        scale_imgs.append(None)\n",
+    "        edited_names.append(None)\n",
     "        continue\n",
     "\n",
     "    edited_names.append(clean_seg_path.name)\n",
@@ -151,16 +156,6 @@
     "    axis.set_axis_off()\n",
     "\n",
     "fig.tight_layout()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e69f07b7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "len(scale_imgs)"
    ]
   },
   {
@@ -273,7 +268,7 @@
     "\n",
     "flat_coeffs = coeffs.reshape((coeffs.shape[0], -1))\n",
     "nan_mask = np.isnan(flat_coeffs).any(axis=1)\n",
-    "print(f\"{np.sum(nan_mask)} NaN\")\n",
+    "print(f\"{np.sum(nan_mask)}\")\n",
     "\n",
     "df_nan_removed = df[~nan_mask].copy()\n",
     "flat_coeffs_nan_removed = flat_coeffs[~nan_mask]\n",
