Streamline nb: don't remove NaNs or handle errors (there shouldn't be any)

--- a/src/notebooks/carran_analysis/shape_analysis.ipynb
+++ b/src/notebooks/carran_analysis/shape_analysis.ipynb
@@ -159,17 +159,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5548615c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# We don't need the non-clean masks any more\n",
-    "del segmentation_paths"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "193bf0e5",
    "metadata": {},
@@ -244,13 +233,9 @@
     "    coeffs = np.load(coeff_dump)\n",
     "else:\n",
     "    n_edge_points, order = 300, 50\n",
-    "    coeffs = []\n",
-    "    for scale in tqdm(clean_segs):\n",
-    "        try:\n",
-    "            coeffs.append(efa.coefficients(scale, n_edge_points, order))\n",
-    "        except errors.BadImgError as e:\n",
-    "            coeffs.append(np.ones((order, 4)) * np.nan)\n",
-    "            print(f\"\\nError processing scale: {e}. NaN coeffs\")\n",
+    "    coeffs = [\n",
+    "        efa.coefficients(scale, n_edge_points, order) for scale in tqdm(clean_segs)\n",
+    "    ]\n",
     "    coeffs = np.stack(coeffs)\n",
     "    np.save(coeff_dump, coeffs)"
    ]
@@ -265,18 +250,14 @@
     "\"\"\"\n",
     "Sort values so that we get the right plotting order for our scatter plots\n",
     "\"\"\"\n",
-    "\n",
     "flat_coeffs = coeffs.reshape((coeffs.shape[0], -1))\n",
-    "nan_mask = np.isnan(flat_coeffs).any(axis=1)\n",
-    "print(f\"{np.sum(nan_mask)}\")\n",
     "\n",
-    "df_nan_removed = df[~nan_mask].copy()\n",
-    "flat_coeffs_nan_removed = flat_coeffs[~nan_mask]\n",
+    "df.sort_values(by=\"magnification\", inplace=True, ascending=True)\n",
+    "df.sort_values(by=\"age\", inplace=True)\n",
+    "df.sort_values(by=\"sex\", inplace=True, ascending=True)\n",
     "\n",
-    "df_nan_removed.sort_values(by=\"magnification\", inplace=True, ascending=True)\n",
-    "df_nan_removed.sort_values(by=\"age\", inplace=True)\n",
-    "df_nan_removed.sort_values(by=\"sex\", inplace=True, ascending=True)\n",
-    "df_nan_removed[\"age\"] = df_nan_removed[\"age\"].astype(str)"
+    "# For the seaborn plotting - we want to encode as a categorical variable\n",
+    "df[\"age\"] = df[\"age\"].astype(str)"
    ]
   },
   {
@@ -290,9 +271,9 @@
     "Create some labels for the sex/age encoding\n",
     "\"\"\"\n",
     "\n",
-    "mf_mask = df_nan_removed[\"sex\"] != \"?\"\n",
-    "mf_df = df_nan_removed[mf_mask].copy()\n",
-    "mf_coeffs = flat_coeffs_nan_removed[mf_mask]\n",
+    "mf_mask = df[\"sex\"] != \"?\"\n",
+    "mf_df = df[mf_mask].copy()\n",
+    "mf_coeffs = flat_coeffs[mf_mask]\n",
     "\n",
     "# Want these groups - M/F age 7/12/18/40\n",
     "groups = np.zeros(mf_coeffs.shape[0], dtype=int)\n",
