--- a/src/notebooks/carran_analysis/shape_analysis.ipynb
+++ b/src/notebooks/carran_analysis/shape_analysis.ipynb
@@ -5,15 +5,17 @@
    "id": "02feb135",
    "metadata": {},
    "source": [
-    "Metadata\n",
+    "Shape Analysis\n",
     "====\n",
-    "First, we'll find how many scales were manually edited (and how):"
+    "This notebook runs through the shape analysis once the segmentation has been performed.\n",
+    "\n",
+    "First we'll get some stats on the metadata: growth stages, sex, age, mutation etc. from the filepaths"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "66afc6b1",
+   "id": "ed5933d6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,15 +33,94 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c6f85080",
+   "id": "b855b6f8",
    "metadata": {},
    "outputs": [],
    "source": [
     "clean_seg_dir = parent_dir.parents[2] / \"segmentations_cleaned\"\n",
     "clean_seg_paths = [clean_seg_dir / pathlib.Path(p).name for p in segmentation_paths]\n",
     "\n",
+    "# Check they all exist...\n",
     "for p in clean_seg_paths:\n",
     "    assert p.exists()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5d81c8cb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "from scale_morphology.scales import metadata\n",
+    "\n",
+    "df = metadata.df([str(x) for x in clean_seg_paths])\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "042fc22d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "Drop scales with missing data\n",
+    "\"\"\"\n",
+    "df = df[~df[\"no_scale\"]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f460c933",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "Plot metadata\n",
+    "\"\"\"\n",
+    "\n",
+    "# Replace NaN magnifications with -1\n",
+    "df.loc[np.isnan(df[\"magnification\"]), \"magnification\"] = -1\n",
+    "\n",
+    "\n",
+    "def plot_mdata(df):\n",
+    "    fig, axes = plt.subplots(2, 4, figsize=(16, 4))\n",
+    "\n",
+    "    for axis, label in zip(\n",
+    "        axes.flat[:5],\n",
+    "        [c for c in df.columns if c not in {\"path\", \"no_scale\"}],\n",
+    "        strict=True,\n",
+    "    ):\n",
+    "        axis.hist(df[label], bins=25)\n",
+    "        axis.set_title(label)\n",
+    "\n",
+    "    for axis, label1, label2 in zip(\n",
+    "        axes.flat[5:], [\"age\", \"sex\", \"growth\"], [\"sex\", \"growth\", \"age\"], strict=True\n",
+    "    ):\n",
+    "        heatmap_data = df.pivot_table(\n",
+    "            index=label1, columns=label2, aggfunc=\"size\", fill_value=0\n",
+    "        )\n",
+    "        sns.heatmap(heatmap_data, annot=True, fmt=\"d\", ax=axis, cbar=False)\n",
+    "        axis.set_ylabel(label1)\n",
+    "        axis.set_xlabel(label2)\n",
+    "\n",
+    "\n",
+    "plot_mdata(df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b9afbd7a",
+   "metadata": {},
+   "source": [
+    "Next, we'll find how many scales were manually edited (and how):"
    ]
   },
   {
@@ -61,10 +142,7 @@
     "\n",
     "from scale_morphology.scales.segmentation import largest_connected_component\n",
     "\n",
-    "scale_paths = [\n",
-    "    parent_dir.parent / p.name.replace(\"_segmentation.tif\", \".tif\")\n",
-    "    for p in clean_seg_paths\n",
-    "]\n",
+    "scale_paths = df[\"path\"]\n",
     "\n",
     "# This is what we'll use for the analysis\n",
     "clean_segs = []\n",
@@ -156,64 +234,6 @@
     "    axis.set_axis_off()\n",
     "\n",
     "fig.tight_layout()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "193bf0e5",
-   "metadata": {},
-   "source": [
-    "Next we'll get some stats on the growth stages, sex, age, mutation etc."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "780eaa56",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "from scale_morphology.scales import metadata\n",
-    "\n",
-    "df = metadata.df([str(x) for x in clean_seg_paths])\n",
-    "\n",
-    "# Replace NaN magnifications with -1\n",
-    "df.loc[np.isnan(df[\"magnification\"]), \"magnification\"] = -1\n",
-    "\n",
-    "def plot_mdata(df):\n",
-    "    fig, axes = plt.subplots(1, 5, figsize=(16, 4))\n",
-    "    for axis, label in zip(axes, [c for c in df.columns if c != \"path\"]):\n",
-    "        axis.hist(df[label], bins=25)\n",
-    "        axis.set_title(label)\n",
-    "    \n",
-    "plot_mdata(df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e7b5d695",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import seaborn as sns\n",
-    "\n",
-    "# count occurrences of each combination of \"age\" and \"sex\"\n",
-    "\n",
-    "# Plot the heatmap\n",
-    "fig, axes = plt.subplots(1, 3, figsize=(18, 6))\n",
-    "for axis, label1, label2 in zip(\n",
-    "    axes, [\"age\", \"sex\", \"growth\"], [\"sex\", \"growth\", \"age\"]\n",
-    "):\n",
-    "    heatmap_data = df.pivot_table(\n",
-    "        index=label1, columns=label2, aggfunc=\"size\", fill_value=0\n",
-    "    )\n",
-    "    sns.heatmap(heatmap_data, annot=True, fmt=\"d\", ax=axis, cbar=False)\n",
-    "    axis.set_ylabel(label1)\n",
-    "    axis.set_xlabel(label2)"
    ]
   },
   {
