--- a/src/notebooks/carran_analysis/shape_analysis.ipynb
+++ b/src/notebooks/carran_analysis/shape_analysis.ipynb
@@ -53,8 +53,6 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import seaborn as sns\n",
-    "import matplotlib.pyplot as plt\n",
     "\n",
     "from scale_morphology.scales import metadata\n",
     "\n",
@@ -72,6 +70,7 @@
     "\"\"\"\n",
     "Drop scales with missing data\n",
     "\"\"\"\n",
+    "\n",
     "df = df[~df[\"no_scale\"]]"
    ]
   },
@@ -86,30 +85,27 @@
     "Plot metadata\n",
     "\"\"\"\n",
     "\n",
+    "import seaborn as sns\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
     "# Replace NaN magnifications with -1\n",
     "df.loc[np.isnan(df[\"magnification\"]), \"magnification\"] = -1\n",
     "\n",
     "\n",
     "def plot_mdata(df):\n",
-    "    fig, axes = plt.subplots(2, 4, figsize=(16, 4))\n",
+    "    vars = [\"sex\", \"magnification\", \"age\", \"growth\", \"mutation\"]\n",
+    "    plot_df = df[vars].copy()\n",
     "\n",
-    "    for axis, label in zip(\n",
-    "        axes.flat[:5],\n",
-    "        [c for c in df.columns if c not in {\"path\", \"no_scale\"}],\n",
-    "        strict=True,\n",
-    "    ):\n",
-    "        axis.hist(df[label], bins=25)\n",
-    "        axis.set_title(label)\n",
+    "    # So that we don't ignore NaN and inf\n",
+    "    plot_df = plot_df.sort_values(by=\"growth\")\n",
+    "    plot_df[\"growth\"] = plot_df[\"growth\"].astype(str)\n",
     "\n",
-    "    for axis, label1, label2 in zip(\n",
-    "        axes.flat[5:], [\"age\", \"sex\", \"growth\"], [\"sex\", \"growth\", \"age\"], strict=True\n",
-    "    ):\n",
-    "        heatmap_data = df.pivot_table(\n",
-    "            index=label1, columns=label2, aggfunc=\"size\", fill_value=0\n",
-    "        )\n",
-    "        sns.heatmap(heatmap_data, annot=True, fmt=\"d\", ax=axis, cbar=False)\n",
-    "        axis.set_ylabel(label1)\n",
-    "        axis.set_xlabel(label2)\n",
+    "    # Sort them so they appear in a sensible order\n",
+    "    plot_df.loc[plot_df[\"growth\"] == \"inf\", \"growth\"] = \"onto\"\n",
+    "    plot_df.loc[plot_df[\"growth\"] == \"nan\", \"growth\"] = \"?\"\n",
+    "\n",
+    "    sns.pairplot(plot_df, kind=\"hist\", vars=vars)\n",
     "\n",
     "\n",
     "plot_mdata(df)"
@@ -147,7 +143,7 @@
     "# This is what we'll use for the analysis\n",
     "clean_segs = []\n",
     "\n",
-    "# This is \n",
+    "# This is\n",
     "raw_segs = []\n",
     "scale_imgs = []  # The original image, or None if the clean + raw masks are the same\n",
     "edited_names = []  # Names of the edited scales\n",
@@ -270,6 +266,7 @@
     "\"\"\"\n",
     "Sort values so that we get the right plotting order for our scatter plots\n",
     "\"\"\"\n",
+    "\n",
     "flat_coeffs = coeffs.reshape((coeffs.shape[0], -1))\n",
     "\n",
     "df.sort_values(by=\"magnification\", inplace=True, ascending=True)\n",
