--- a/src/notebooks/carran_analysis/shape_analysis.ipynb
+++ b/src/notebooks/carran_analysis/shape_analysis.ipynb
@@ -127,8 +127,12 @@
    "outputs": [],
    "source": [
     "\"\"\"\n",
-    "Read in pairs of the clean/raw segmentations. Invert the clean ones (whoops) and check them against the raw; if they don't match, keep track of them...\n",
+    "Read in pairs of the clean/raw segmentations, filling holes/removing small objects from the cleaned segmentation.\n",
+    "\n",
+    "Keep track of which ones differ from the clean segmentation\n",
     "\"\"\"\n",
+    "\n",
+    "from concurrent.futures import ThreadPoolExecutor\n",
     "\n",
     "import tifffile\n",
     "import numpy as np\n",
@@ -140,40 +144,78 @@
     "\n",
     "scale_paths = df[\"path\"]\n",
     "\n",
-    "# This is what we'll use for the analysis\n",
-    "clean_segs = []\n",
     "\n",
-    "# This is\n",
-    "raw_segs = []\n",
-    "scale_imgs = []  # The original image, or None if the clean + raw masks are the same\n",
-    "edited_names = []  # Names of the edited scales\n",
+    "def load_scale_data(paths):\n",
+    "    \"\"\"\n",
+    "    Takes (i, (scale_path, raw_seg_path, clean_seg_path))\n",
     "\n",
-    "for scale_path, raw_seg_path, clean_seg_path in zip(\n",
-    "    tqdm(scale_paths), segmentation_paths, clean_seg_paths\n",
-    "):\n",
-    "    clean_seg = tifffile.imread(clean_seg_path)\n",
+    "    Returns (cleaned_by_carran, fixed_in_post, raw_seg, carran_seg, clean_seg)\n",
+    "    \"\"\"\n",
+    "    i, (scale_path, raw_seg_path, clean_seg_path) = paths\n",
+    "\n",
     "    raw_seg = (tifffile.imread(raw_seg_path) * 255).astype(np.uint8)\n",
+    "    carran_seg = tifffile.imread(clean_seg_path)\n",
     "\n",
-    "    if euler_number(clean_seg) != 1:\n",
+    "    cleaned_by_carran = (carran_seg != raw_seg).any()\n",
+    "\n",
+    "    fixed_in_post = euler_number(carran_seg) != 1\n",
+    "    if fixed_in_post:\n",
     "        # Fill holes\n",
-    "        clean_seg = binary_fill_holes(clean_seg)\n",
+    "        clean_seg = binary_fill_holes(carran_seg)\n",
     "        # Remove small objects\n",
     "        clean_seg = (largest_connected_component(clean_seg) * 255).astype(np.uint8)\n",
     "\n",
-    "    # It's possible we might have removed everything\n",
-    "    if euler_number(clean_seg) != 1:\n",
-    "        raise ValueError(f\"Got {euler_number(clean_seg)=}\")\n",
+    "        # It's possible we might have removed everything, so just make sure we haven't here\n",
+    "        if euler_number(clean_seg) != 1:\n",
+    "            raise ValueError(f\"Got {euler_number(clean_seg)=}\")\n",
+    "    else:\n",
+    "        clean_seg = carran_seg\n",
     "\n",
-    "    clean_segs.append(clean_seg)\n",
-    "    raw_segs.append(raw_seg)\n",
+    "    return cleaned_by_carran, fixed_in_post, raw_seg, carran_seg, clean_seg\n",
     "\n",
-    "    if (clean_seg == raw_seg).all():\n",
-    "        scale_imgs.append(None)\n",
-    "        edited_names.append(None)\n",
-    "        continue\n",
     "\n",
-    "    edited_names.append(clean_seg_path.name)\n",
-    "    scale_imgs.append(tifffile.imread(scale_path))"
+    "with ThreadPoolExecutor(max_workers=32) as executor:\n",
+    "    results = list(\n",
+    "        tqdm(\n",
+    "            executor.map(\n",
+    "                load_scale_data,\n",
+    "                enumerate(zip(scale_paths, segmentation_paths, clean_seg_paths)),\n",
+    "            ),\n",
+    "            total=len(scale_paths),\n",
+    "        )\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1f124ebd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "raw_segs = []\n",
+    "carran_segs = []\n",
+    "clean_segs = []\n",
+    "\n",
+    "# Which segmentations were edited by Carran and which segmentations we needed\n",
+    "# to fill holes/remove small objects from\n",
+    "cleaned_by_carran = []\n",
+    "fixed_in_post = []\n",
+    "\n",
+    "for _carran_fix, _post_fix, _raw, _carran, _clean in results:\n",
+    "    cleaned_by_carran.append(_carran_fix)\n",
+    "    fixed_in_post.append(_post_fix)\n",
+    "\n",
+    "    raw_segs.append(_raw)\n",
+    "    carran_segs.append(_carran)\n",
+    "    clean_segs.append(_clean)\n",
+    "\n",
+    "cleaned_by_carran = np.array(cleaned_by_carran)\n",
+    "fixed_in_post = np.array(fixed_in_post)\n",
+    "\n",
+    "raw_segs = np.array(raw_segs)\n",
+    "carran_segs = np.array(carran_segs)\n",
+    "clean_segs = np.array(clean_segs)"
    ]
   },
   {
@@ -184,7 +226,7 @@
    "outputs": [],
    "source": [
     "\"\"\"\n",
-    "Show the edited scales\n",
+    "Show the masks that Carran edited\n",
     "\"\"\"\n",
     "\n",
     "import textwrap\n",
@@ -192,9 +234,12 @@
     "from matplotlib import colors\n",
     "\n",
     "\n",
+    "print(cleaned_by_carran.sum())\n",
+    "\n",
+    "\n",
     "def clear_seismic() -> colors.Colormap:\n",
     "    \"\"\"\n",
-    "    Colormap that varies from clear to a colour\n",
+    "    Colormap that varies from blue to red via transparent\n",
     "    \"\"\"\n",
     "    c_blue = colors.colorConverter.to_rgba(\"blue\")\n",
     "    c_white = colors.colorConverter.to_rgba(\"white\", alpha=0)\n",
@@ -204,19 +249,15 @@
     "\n",
     "fig, axes = plt.subplots(10, 10, figsize=(24, 24))\n",
     "\n",
-    "names = [n for n in edited_names if n is not None]\n",
-    "\n",
-    "for axis, name in zip(axes.flat, names):\n",
-    "    # Find the index where it lives in the list\n",
-    "    i = 0\n",
-    "    for p in scale_paths:\n",
-    "        if p.name == name.replace(\"_segmentation.tif\", \".tif\"):\n",
-    "            break\n",
-    "        i += 1\n",
-    "    axis.imshow(scale_imgs[i])\n",
-    "    axis.imshow(clean_segs[i], alpha=0.5)\n",
+    "for axis, path, _raw, _cleaned in zip(\n",
+    "    axes.flat,\n",
+    "    df[\"path\"][cleaned_by_carran],\n",
+    "    raw_segs[cleaned_by_carran],\n",
+    "    clean_segs[cleaned_by_carran],\n",
+    "):\n",
+    "    axis.imshow(_raw, alpha=0.5)\n",
     "    axis.imshow(\n",
-    "        raw_segs[i] - clean_segs[i],\n",
+    "        _raw - _cleaned,\n",
     "        cmap=clear_seismic(),\n",
     "        vmin=-1,\n",
     "        vmax=1,\n",
@@ -224,7 +265,9 @@
     "    )\n",
     "\n",
     "    axis.set_title(\n",
-    "        \"\\n\".join(textwrap.wrap(name, width=20)).strip(\".tif\").replace(\"_\", \" \"),\n",
+    "        \"\\n\".join(textwrap.wrap(pathlib.Path(path).name, width=20))\n",
+    "        .strip(\".tif\")\n",
+    "        .replace(\"_\", \" \"),\n",
     "        fontsize=8,\n",
     "    )\n",
     "    axis.set_axis_off()\n",
