plot the difference between carran + autoseg and cleaned + carran

--- a/src/notebooks/carran_analysis/shape_analysis.ipynb
+++ b/src/notebooks/carran_analysis/shape_analysis.ipynb
@@ -234,9 +234,6 @@
     "from matplotlib import colors\n",
     "\n",
     "\n",
-    "print(cleaned_by_carran.sum())\n",
-    "\n",
-    "\n",
     "def clear_seismic() -> colors.Colormap:\n",
     "    \"\"\"\n",
     "    Colormap that varies from blue to red via transparent\n",
@@ -253,16 +250,52 @@
     "    axes.flat,\n",
     "    df[\"path\"][cleaned_by_carran],\n",
     "    raw_segs[cleaned_by_carran],\n",
-    "    clean_segs[cleaned_by_carran],\n",
+    "    carran_segs[cleaned_by_carran],\n",
     "):\n",
     "    axis.imshow(_raw, alpha=0.5)\n",
     "    axis.imshow(\n",
-    "        _raw - _cleaned,\n",
+    "        _raw.astype(int) - _cleaned,\n",
     "        cmap=clear_seismic(),\n",
-    "        vmin=-1,\n",
-    "        vmax=1,\n",
+    "        vmin=-255,\n",
+    "        vmax=255,\n",
     "        interpolation=\"none\",\n",
     "    )\n",
+    "\n",
+    "    axis.set_title(\n",
+    "        \"\\n\".join(textwrap.wrap(pathlib.Path(path).name, width=20))\n",
+    "        .strip(\".tif\")\n",
+    "        .replace(\"_\", \" \"),\n",
+    "        fontsize=8,\n",
+    "    )\n",
+    "    axis.set_axis_off()\n",
+    "\n",
+    "fig.tight_layout()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aa93d144",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, axes = plt.subplots(12, 12, figsize=(24, 24))\n",
+    "\n",
+    "for axis, path, _raw, _cleaned in zip(\n",
+    "    axes.flat,\n",
+    "    df[\"path\"][fixed_in_post],\n",
+    "    carran_segs[fixed_in_post],\n",
+    "    clean_segs[fixed_in_post],\n",
+    "):\n",
+    "    axis.imshow(_raw, alpha=0.5)\n",
+    "\n",
+    "    diff = _raw.astype(int) - _cleaned\n",
+    "\n",
+    "    y, x = np.argwhere(diff == -255).T\n",
+    "    axis.scatter(x, y, s=1, c=\"blue\")\n",
+    "\n",
+    "    y, x = np.argwhere(diff == 255).T\n",
+    "    axis.scatter(x, y, s=1, c=\"red\")\n",
     "\n",
     "    axis.set_title(\n",
     "        \"\\n\".join(textwrap.wrap(pathlib.Path(path).name, width=20))\n",
