standard scale + run with mutation type as well

--- a/src/notebooks/carran_analysis/shape_analysis.ipynb
+++ b/src/notebooks/carran_analysis/shape_analysis.ipynb
@@ -335,6 +335,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "b4f833b1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
+    "scaler = StandardScaler()\n",
+    "coeffs = scaler.fit_transform(coeffs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "648e1d59",
    "metadata": {},
    "outputs": [],
@@ -578,6 +591,90 @@
    "source": [
     "# In-sample metrics\n",
     "per_class_separability(mf_coeffs, groups, cv=5, random_state=42, in_sample=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5bbc84ae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "Do the LDA using different labels\n",
+    "\"\"\"\n",
+    "\n",
+    "m18_mask = (df[\"sex\"] == \"M\") & (df[\"age\"] == \"18\")\n",
+    "m18_df = df[m18_mask]\n",
+    "m18_coeffs = coeffs[m18_mask]\n",
+    "\n",
+    "m18_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fb556942",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Want these groups - onto/regen wt/omd\n",
+    "assert set(np.unique(m18_df[\"mutation\"])) == {\"OMD\", \"WT\"}\n",
+    "assert set(np.unique(m18_df[\"growth\"])) == {np.inf, 10}\n",
+    "\n",
+    "groups = np.zeros(len(m18_coeffs), dtype=int)\n",
+    "\n",
+    "groups[m18_df[\"growth\"] == np.inf] += 2\n",
+    "groups[m18_df[\"mutation\"] == \"WT\"] += 1\n",
+    "\n",
+    "encoding = {0: \"Regen (10); OMD\", 1: \"Regen (10); WT\", 2: \"Onto; OMD\", 3: \"Onto; WT\"}\n",
+    "colours = {0: \"blue\", 1: \"red\", 2: \"darkblue\", 3: \"lightcoral\"}\n",
+    "\n",
+    "lda = LinearDiscriminantAnalysis()\n",
+    "lda_coeffs = lda.fit_transform(m18_coeffs, groups)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aac346aa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, axes = plt.subplots(1, 2, figsize=(14, 6))\n",
+    "\n",
+    "for i, axis in enumerate(axes):\n",
+    "    x = lda_coeffs[:, i]\n",
+    "    y = lda_coeffs[:, i + 1]\n",
+    "\n",
+    "    # Grid for this pair\n",
+    "    xmin, xmax = x.min(), x.max()\n",
+    "    ymin, ymax = y.min(), y.max()\n",
+    "    xx, yy = np.mgrid[xmin:xmax:200j, ymin:ymax:200j]\n",
+    "    positions = np.vstack([xx.ravel(), yy.ravel()])\n",
+    "\n",
+    "    handles = []\n",
+    "    for g, label in encoding.items():\n",
+    "        mask = groups == g\n",
+    "        if mask.sum() < 2:\n",
+    "            continue  # KDE needs at least 2 points\n",
+    "\n",
+    "        data = np.vstack([x[mask], y[mask]])\n",
+    "        kde = gaussian_kde(data)\n",
+    "        f = np.reshape(kde(positions).T, xx.shape)\n",
+    "\n",
+    "        axis.contourf(xx, yy, f, levels=15, cmap=clear2colour_cmap(colours[g]))\n",
+    "        n = int(np.sum(mask))\n",
+    "        handles.append(Patch(color=colours[g], label=f\"{label}, {n=}\"))\n",
+    "\n",
+    "        axis.scatter(*data, c=colours[g], s=5, marker=\"s\", linewidth=0.5, edgecolor=\"k\")\n",
+    "\n",
+    "    axis.set_title(f\"LD{i+1} vs LD{i+2}\")\n",
+    "\n",
+    "axes[0].legend(handles=handles)\n",
+    "\n",
+    "fig.suptitle(\"M18\")\n",
+    "fig.tight_layout()"
    ]
   }
  ],
