--- a/src/notebooks/carran_analysis/1-shape_analysis.ipynb
+++ b/src/notebooks/carran_analysis/1-shape_analysis.ipynb
@@ -22,27 +22,12 @@
     "import pathlib\n",
     "\n",
     "parent_dir = pathlib.Path(\n",
-    "    \"~/zebrafish_rdsf/Carran/Postgrad/Scale images from WT_spp1_sost/TIFs/segmentations\"\n",
+    "    \"~/zebrafish_rdsf/Carran/Postgrad/segmentations_cleaned\"\n",
     ").expanduser()\n",
     "assert parent_dir.exists()\n",
     "\n",
     "segmentation_paths = sorted([str(x) for x in parent_dir.glob(\"*.tif\")])\n",
     "f\"{len(segmentation_paths)} segmentations\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b855b6f8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "clean_seg_dir = parent_dir.parents[2] / \"segmentations_cleaned\"\n",
-    "clean_seg_paths = [clean_seg_dir / pathlib.Path(p).name for p in segmentation_paths]\n",
-    "\n",
-    "# Check they all exist...\n",
-    "for p in clean_seg_paths:\n",
-    "    assert p.exists()"
    ]
   },
   {
@@ -56,7 +41,7 @@
     "\n",
     "from scale_morphology.scales import metadata\n",
     "\n",
-    "df = metadata.df([str(x) for x in clean_seg_paths])\n",
+    "df = metadata.df([str(x) for x in segmentation_paths])\n",
     "df.head()"
    ]
   },
@@ -77,59 +62,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f460c933",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\"\"\"\n",
-    "Plot metadata\n",
-    "\"\"\"\n",
-    "\n",
-    "import seaborn as sns\n",
-    "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "# Replace NaN magnifications with -1\n",
-    "df.loc[np.isnan(df[\"magnification\"]), \"magnification\"] = -1\n",
-    "\n",
-    "\n",
-    "def plot_mdata(df):\n",
-    "    vars = [\"sex\", \"magnification\", \"age\", \"growth\", \"mutation\"]\n",
-    "    plot_df = df[vars].copy()\n",
-    "\n",
-    "    # So that we don't ignore NaN and inf\n",
-    "    plot_df = plot_df.sort_values(by=\"growth\")\n",
-    "    plot_df[\"growth\"] = plot_df[\"growth\"].astype(str)\n",
-    "\n",
-    "    # Sort them so they appear in a sensible order\n",
-    "    plot_df.loc[plot_df[\"growth\"] == \"inf\", \"growth\"] = \"onto\"\n",
-    "    plot_df.loc[plot_df[\"growth\"] == \"nan\", \"growth\"] = \"?\"\n",
-    "\n",
-    "    sns.pairplot(plot_df, kind=\"hist\", vars=vars)\n",
-    "\n",
-    "\n",
-    "plot_mdata(df)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b9afbd7a",
-   "metadata": {},
-   "source": [
-    "Next, we'll find how many scales were manually edited (and how):"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "7124ae38",
    "metadata": {},
    "outputs": [],
    "source": [
     "\"\"\"\n",
-    "Read in pairs of the clean/raw segmentations, filling holes/removing small objects from the cleaned segmentation.\n",
+    "If necessary, read in the scales from the RDSF and perform EFA on them.\n",
     "\n",
-    "Keep track of which ones differ from the clean segmentation\n",
+    "Otherwise read in the EFA coefficients from a cache\n",
     "\"\"\"\n",
     "\n",
     "from concurrent.futures import ThreadPoolExecutor\n",
@@ -140,194 +80,45 @@
     "from skimage.measure import euler_number\n",
     "from scipy.ndimage import binary_fill_holes\n",
     "\n",
+    "from scale_morphology.scales import efa\n",
     "from scale_morphology.scales.segmentation import largest_connected_component\n",
     "\n",
-    "scale_paths = df[\"path\"]\n",
     "\n",
-    "\n",
-    "def load_scale_data(paths):\n",
+    "def load_scale_data(segmentation_path):\n",
     "    \"\"\"\n",
-    "    Takes (i, (scale_path, raw_seg_path, clean_seg_path))\n",
-    "\n",
-    "    Returns (cleaned_by_carran, fixed_in_post, raw_seg, carran_seg, clean_seg)\n",
+    "    Returns the cleaned segmentations\n",
     "    \"\"\"\n",
-    "    i, (scale_path, raw_seg_path, clean_seg_path) = paths\n",
-    "\n",
-    "    raw_seg = (tifffile.imread(raw_seg_path) * 255).astype(np.uint8)\n",
-    "    carran_seg = tifffile.imread(clean_seg_path)\n",
-    "\n",
-    "    cleaned_by_carran = (carran_seg != raw_seg).any()\n",
-    "\n",
-    "    fixed_in_post = euler_number(carran_seg) != 1\n",
-    "    if fixed_in_post:\n",
+    "    scale = tifffile.imread(segmentation_path)\n",
+    "    if euler_number(scale) != 1:\n",
     "        # Fill holes\n",
-    "        clean_seg = binary_fill_holes(carran_seg)\n",
+    "        scale = binary_fill_holes(scale)\n",
     "        # Remove small objects\n",
-    "        clean_seg = (largest_connected_component(clean_seg) * 255).astype(np.uint8)\n",
+    "        scale = (largest_connected_component(scale) * 255).astype(np.uint8)\n",
     "\n",
     "        # It's possible we might have removed everything, so just make sure we haven't here\n",
-    "        if euler_number(clean_seg) != 1:\n",
-    "            raise ValueError(f\"Got {euler_number(clean_seg)=}\")\n",
-    "    else:\n",
-    "        clean_seg = carran_seg\n",
+    "        if euler_number(scale) != 1:\n",
+    "            raise ValueError(f\"Got {euler_number(scale)=}\")\n",
     "\n",
-    "    return cleaned_by_carran, fixed_in_post, raw_seg, carran_seg, clean_seg\n",
+    "    return scale\n",
     "\n",
-    "\n",
-    "with ThreadPoolExecutor(max_workers=32) as executor:\n",
-    "    results = list(\n",
-    "        tqdm(\n",
-    "            executor.map(\n",
-    "                load_scale_data,\n",
-    "                enumerate(zip(scale_paths, segmentation_paths, clean_seg_paths)),\n",
-    "            ),\n",
-    "            total=len(scale_paths),\n",
-    "        )\n",
-    "    )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1f124ebd",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "raw_segs = []\n",
-    "carran_segs = []\n",
-    "clean_segs = []\n",
-    "\n",
-    "# Which segmentations were edited by Carran and which segmentations we needed\n",
-    "# to fill holes/remove small objects from\n",
-    "cleaned_by_carran = []\n",
-    "fixed_in_post = []\n",
-    "\n",
-    "for _carran_fix, _post_fix, _raw, _carran, _clean in results:\n",
-    "    cleaned_by_carran.append(_carran_fix)\n",
-    "    fixed_in_post.append(_post_fix)\n",
-    "\n",
-    "    raw_segs.append(_raw)\n",
-    "    carran_segs.append(_carran)\n",
-    "    clean_segs.append(_clean)\n",
-    "\n",
-    "cleaned_by_carran = np.array(cleaned_by_carran)\n",
-    "fixed_in_post = np.array(fixed_in_post)\n",
-    "\n",
-    "raw_segs = np.array(raw_segs)\n",
-    "carran_segs = np.array(carran_segs)\n",
-    "clean_segs = np.array(clean_segs)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "508a5652",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\"\"\"\n",
-    "Show the masks that Carran edited\n",
-    "\"\"\"\n",
-    "\n",
-    "import textwrap\n",
-    "import matplotlib.pyplot as plt\n",
-    "from matplotlib import colors\n",
-    "\n",
-    "\n",
-    "def clear_seismic() -> colors.Colormap:\n",
-    "    \"\"\"\n",
-    "    Colormap that varies from blue to red via transparent\n",
-    "    \"\"\"\n",
-    "    c_blue = colors.colorConverter.to_rgba(\"blue\")\n",
-    "    c_white = colors.colorConverter.to_rgba(\"white\", alpha=0)\n",
-    "    c_red = colors.colorConverter.to_rgba(\"red\")\n",
-    "    return colors.ListedColormap([c_blue, c_white, c_red], f\"clear2seismic\")\n",
-    "\n",
-    "\n",
-    "fig, axes = plt.subplots(10, 10, figsize=(24, 24))\n",
-    "\n",
-    "for axis, path, _raw, _cleaned in zip(\n",
-    "    axes.flat,\n",
-    "    df[\"path\"][cleaned_by_carran],\n",
-    "    raw_segs[cleaned_by_carran],\n",
-    "    carran_segs[cleaned_by_carran],\n",
-    "):\n",
-    "    axis.imshow(_raw, alpha=0.5)\n",
-    "    axis.imshow(\n",
-    "        _raw.astype(int) - _cleaned,\n",
-    "        cmap=clear_seismic(),\n",
-    "        vmin=-255,\n",
-    "        vmax=255,\n",
-    "        interpolation=\"none\",\n",
-    "    )\n",
-    "\n",
-    "    axis.set_title(\n",
-    "        \"\\n\".join(textwrap.wrap(pathlib.Path(path).name, width=20))\n",
-    "        .strip(\".tif\")\n",
-    "        .replace(\"_\", \" \"),\n",
-    "        fontsize=8,\n",
-    "    )\n",
-    "    axis.set_axis_off()\n",
-    "\n",
-    "fig.tight_layout()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "aa93d144",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig, axes = plt.subplots(12, 12, figsize=(24, 24))\n",
-    "\n",
-    "for axis, path, _raw, _cleaned in zip(\n",
-    "    axes.flat,\n",
-    "    df[\"path\"][fixed_in_post],\n",
-    "    carran_segs[fixed_in_post],\n",
-    "    clean_segs[fixed_in_post],\n",
-    "):\n",
-    "    axis.imshow(_raw, alpha=0.5)\n",
-    "\n",
-    "    diff = _raw.astype(int) - _cleaned\n",
-    "\n",
-    "    y, x = np.argwhere(diff == -255).T\n",
-    "    axis.scatter(x, y, s=1, c=\"blue\")\n",
-    "\n",
-    "    y, x = np.argwhere(diff == 255).T\n",
-    "    axis.scatter(x, y, s=1, c=\"red\")\n",
-    "\n",
-    "    axis.set_title(\n",
-    "        \"\\n\".join(textwrap.wrap(pathlib.Path(path).name, width=20))\n",
-    "        .strip(\".tif\")\n",
-    "        .replace(\"_\", \" \"),\n",
-    "        fontsize=8,\n",
-    "    )\n",
-    "    axis.set_axis_off()\n",
-    "\n",
-    "fig.tight_layout()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4f6320d2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import tifffile\n",
-    "from tqdm.notebook import tqdm\n",
-    "from scale_morphology.scales import efa, errors\n",
     "\n",
     "coeff_dump = pathlib.Path(\"carran_coeffs.npy\")\n",
     "\n",
     "if coeff_dump.is_file():\n",
     "    coeffs = np.load(coeff_dump)\n",
+    "\n",
     "else:\n",
     "    n_edge_points, order = 300, 50\n",
-    "    coeffs = [\n",
-    "        efa.coefficients(scale, n_edge_points, order) for scale in tqdm(clean_segs)\n",
-    "    ]\n",
+    "\n",
+    "    with ThreadPoolExecutor(max_workers=32) as executor:\n",
+    "        scales = np.array(\n",
+    "            tqdm(\n",
+    "                executor.map(load_scale_data, segmentation_paths),\n",
+    "                total=len(scale_paths),\n",
+    "            )\n",
+    "        )\n",
+    "\n",
+    "    coeffs = [efa.coefficients(scale, n_edge_points, order) for scale in tqdm(scales)]\n",
     "    coeffs = np.stack(coeffs)\n",
     "    np.save(coeff_dump, coeffs)"
    ]
@@ -445,6 +236,7 @@
    "outputs": [],
    "source": [
     "from matplotlib import colors\n",
+    "import matplotlib.pyplot as plt\n",
     "from matplotlib.patches import Patch\n",
     "from scipy.stats import gaussian_kde\n",
     "\n",
@@ -641,11 +433,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig, axes = plt.subplots(1, 2, figsize=(14, 6))\n",
+    "fig, axes = plt.subplots(1, 3, figsize=(14, 6))\n",
     "\n",
     "for i, axis in enumerate(axes):\n",
     "    x = lda_coeffs[:, i]\n",
-    "    y = lda_coeffs[:, i + 1]\n",
+    "    y = lda_coeffs[:, i + 1 if i < 2 else 0]\n",
     "\n",
     "    # Grid for this pair\n",
     "    xmin, xmax = x.min(), x.max()\n",
@@ -673,8 +465,7 @@
     "\n",
     "axes[0].legend(handles=handles)\n",
     "\n",
-    "fig.suptitle(\"M18\")\n",
-    "fig.tight_layout()"
+    "fig.suptitle(\"M18\")"
    ]
   }
  ],
